fixed navbar , logo, alignament

--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Manrope&display=swap');
 
 
 #bg1{
@@ -21,11 +22,14 @@
    
   }
   .logo1{
-    
-    height: 170px;
-    width: 456px;
-    margin-top:-50px  ;
-    margin-left: 40px;
+    /* height: 170px;
+    width: 456px; */
+
+    height: auto;
+    width: 370px;
+    margin-top:-30px  ;
+    margin-left: 60px;
+
     
   }
   .desktop1-i-m-a-g-e291 {
@@ -43,7 +47,7 @@
     height: 196px;
     display: flex;
     padding: 33px 29px;
-   margin-top:-20px;
+    margin-top:-20px;
     position: absolute;
     align-items: center;
     flex-shrink: 0;
@@ -88,73 +92,35 @@
     position: absolute;
     border-color: transparent;
   }
-  .desktop1-text02 {
-    color: rgb(9, 0, 0);
+  .button-nav{
+    color: black;
     height: auto;
-    font-size: 34px;
+    font-size: 2rem;
     align-self: auto;
-    
+    display: flex;
+    cursor: pointer;
     text-align: left;
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Manrope', sans-serif;
     font-weight: 500;
     line-height: normal;
     font-stretch: normal;
     margin-right: 35px;
     margin-bottom: 0;
     text-decoration: none;
+    border: 0px;
+    background: transparent;
+    padding: 10px;
   }
-  .desktop1-text04 {
-    color: rgba(3, 28, 30, 0.8999999761581421);
-    height: auto;
-    font-size: 34px;
-    align-self: auto;
-    font-style: Medium;
-    text-align: left;
-    font-family: 'Raleway', sans-serif;
-    font-weight: 500;
-    line-height: normal;
-    font-stretch: normal;
-    margin-right: 35px;
-    margin-bottom: 0;
-    text-decoration: none;
-  }
-  .desktop1-text06 {
-    color: rgba(3, 28, 30, 0.8999999761581421);
-    height: auto;
-    font-size: 34px;
-    align-self: auto;
-    font-style: Medium;
-    text-align: left;
-    font-family: 'Raleway', sans-serif;
-    font-weight: 500;
-    line-height: normal;
-    font-stretch: normal;
-    margin-right: 35px;
-    margin-bottom: 0;
-    text-decoration: none;
-  }
-  .desktop1-text08 {
-    color: rgba(3, 28, 30, 0.8999999761581421);
-    height: auto;
-    font-size: 34px;
-    align-self: auto;
-    font-style: Medium;
-    text-align: left;
-    font-family: 'Raleway', sans-serif;
-    font-weight: 500;
-    line-height: normal;
-    font-stretch: normal;
-    margin-right: 0;
-    margin-bottom: 0;
-    text-decoration: none;
-  }
+  
+  
+  
   .desktop1-hero {
     top: 80px;
     left: 88px;
-    width: 1519px;
-    height: 613px;
+    width: auto;
+    height: auto;
     display: flex;
-    padding: 0;
+    padding: 10rem;
     position: absolute;
     align-self: auto;
     box-sizing: border-box;
@@ -171,39 +137,43 @@
     background-color: transparent;
   }
   .desktop1-ellipse1 {
-    top: 86.78134155273438px;
+    top: 10rem;
     left: 923px;
     width: 339px;
     height: 352px;
     position: absolute;
     border-color: transparent;
-    /* Ellipse 1 */
+    margin-left: 30rem;
+    margin-top: 20rem;
+    width: 339px;
+    height: 352.42px;
+    left: 1011px;
+    top: 166.78px;
 
-position: absolute;
-width: 339px;
-height: 352.42px;
-left: 1011px;
-top: 166.78px;
-
-background: radial-gradient(50% 50% at 50% 50%, #1AA00E 0%, rgba(27, 145, 17, 0) 100%);
+    background: radial-gradient(50% 50% at 50% 50%, #1AA00E 0%, rgba(27, 145, 17, 0) 100%);
 
   }
   .desktop1-q-dhn-wmpw-i-f2gt2awesk-rtransformed1 {
     top: 30px;
     left: 550px;
     width: 1151px;
-    height: 737px;
+    height: auto;
     position: absolute;
     border-color: transparent;
+    display: flex;
+    flex-direction: row;
+    margin-left: 25rem;
+    margin-top: 20px;
+    
   }
   .desktop1-text10 {
     top: 169.32945251464844px;
     left: -1.1368683772161603e-13px;
     color: rgba(255, 255, 255, 1);
-    width: 875px;
+    width: auto;
     height: auto;
     position: absolute;
-    font-size: 140px;
+    font-size: 10rem;
     align-self: auto;
     font-style: Bold;
     text-align: left;
@@ -237,13 +207,65 @@ background: radial-gradient(50% 50% at 50% 50%, #1AA00E 0%, rgba(27, 145, 17, 0)
     margin-right: 0;
     margin-bottom: 0;
     text-decoration: none;
-    transition: 200ms;
+    transition: 300ms;
+    margin-top: 5rem;
   }
-  .desktop1-text15 {
-   
-  }
+  
   .desktop1-frame1:hover{
     color:#a811ff59;
-    background-color: white;
+    background-color: cyan;
   }
- 
+  .button-nav:hover{
+    transform: scale(1.2);
+  }
+  
+.hero2{
+  display: flex;
+  height: auto;
+  width: auto;
+  flex-direction: row;
+  
+
+} 
+.box1{
+  display: flex;
+  flex-wrap: wrap;
+  border: 3px solid black;
+  height: 300px;
+  width: 400px;
+  border-radius: 1.5rem;
+  margin-left: 20px;
+  margin-top: 10px;
+}
+.offer-1{
+  font-size: 5rem;
+  font-family: Poppins;
+  color: white;
+
+}
+.box2{
+  display: flex;
+  flex-direction: row;
+}
+a{
+  text-decoration: none;
+  
+}
+a:hover{
+  color: none;
+}
+a:active{
+  color: black;
+
+}
+a::after{
+  color:black;
+}
+a::before{
+  color: black;
+}
+
+a:visited{
+  color: black;
+}
+
